test/files/pos/t7212b/ScalaThing.scala

// scalac: -Xsource:3-cross -Xmigration

class ScalaThing extends JavaThing {
  override def remove() = ???
}
