test/files/neg/nullary-override-3d/A_1.scala
// scalac: -Werror -Xsource:3 -Xlint:nullary-override
//
class A { def x: Int = 3 }
